--- a/src/components/FormTask/FormTasks.module.scss
+++ b/src/components/FormTask/FormTasks.module.scss
@@ -13,11 +13,15 @@
         outline: none;
         color: #000;
         border: 1px solid #b9b9b9;
+        &:hover, 
+        &:focus {
+            border: 1px solid #262626;
+        }
     }
     &__button {
-        background-color: #8b2cc7;
+        background-color: #515151;
         height: 30px;
-        border-radius: 3px;
+        border-radius: 50%;
         justify-content: center;
         color: #fff;
         font-size: 30px;
@@ -26,7 +30,7 @@
         text-align: center;
         cursor: pointer;
         &:hover {
-            background-color: #8b2aa8;
+            background-color: #262626;
         }
     }
 }
