--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@ body, * {
   font-family: Georgia, "Times New Roman", serif;
 }
 
+body {
+  background: #d3d0d0;
+}
+
 .flex {
   display: flex;
   align-items: center;
@@ -29,12 +33,31 @@ h1 {
   padding: 30px;
   flex-direction: column;
   gap: 30px;
-  max-width: 340px;
+  max-width: 480px;
   width: 100%;
   border-radius: 3px;
+  border: 1px solid #484747;
 }
 
 .modal-center .feedback-error {
   color: red;
   font-size: 12px;
+}
+
+.modalConfirmClearTask {
+  transform: translate(50%, -50%);
+  top: 50%;
+  right: 50%;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  z-index: 99999999999;
+  background: #cacaca;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 30px;
+  text-align: center;
+  gap: 20px;
 }
