--- a/src/components/ListTask/ListTask.module.scss
+++ b/src/components/ListTask/ListTask.module.scss
@@ -7,8 +7,67 @@
     li {
         width: 100%;
         background-color: #dfdfdf;
-        padding: 6px 10px;
         border-radius: 3px;
+        gap: 8px;
+        position: relative;
+        padding: 6px 10px 6px 44px;
+        
+        input[type="checkbox"] {
+            /* Add if not using autoprefixer */
+            -webkit-appearance: none;
+            /* Remove most all native input styles */
+            appearance: none;
+            /* For iOS < 15 */
+            background-color: #fff;
+            /* Not removed via appearance */
+            margin: 0;
+          
+            font: inherit;
+            color: currentColor;
+            width: 34px;
+            height: 31px;
+            border: 0.15em solid #2cd12c;
+            background-color: #3abd3a;
+            border-radius: 3px;
+            position: absolute;
+            left: 0;
+            outline: none!important;
+            // transform: translateY(-0.075em);
+          
+            display: grid;
+            place-content: center;
+        }
+        
+        input[type="checkbox"]::before {
+        content: "";
+        width: 0.65em;
+        height: 0.65em;
+        clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
+        transform: scale(0);
+        transform-origin: bottom left;
+        transition: 120ms transform ease-in-out;
+        box-shadow: inset 1em 1em var(--form-control-color);
+        /* Windows High Contrast Mode */
+        background-color: CanvasText;
+        }
+        
+        input[type="checkbox"]:checked::before {
+        transform: scale(1);
+        border: 0.15em solid #2cd12c;
+        }
+        
+        input[type="checkbox"]:focus {
+        outline: max(2px, 0.15em) solid currentColor;
+        outline-offset: max(2px, 0.15em);
+        }
+        
+        input[type="checkbox"]:disabled {
+        --form-control-color: var(--form-control-disabled);
+        
+        color: var(--form-control-disabled);
+        cursor: not-allowed;
+        }
+        
         button {
             position: absolute;
             right: 0;
@@ -27,6 +86,9 @@
                 display: flex;
             }
         }
+        &.itemCheck {
+            background-color: #2cd12c;
+        }
     }
 }
 
@@ -40,6 +102,50 @@
         cursor: pointer;
         &:hover {
             border: 1px solid #262626;
+        }
+    }
+}
+
+
+.modalConfirmClearTask {
+    transform: translate(50%, -50%);
+    top: 50%;
+    right: 50%;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    max-width: 100%;
+    z-index: 99999999999;
+    background-color: #efefef;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 30px;
+    text-align: center;
+    h2 {
+        color: #515151;
+        font-size: 40px;
+    }
+    &__buttons {
+        flex-direction: column;
+        gap: 16px;
+        button {
+            background-color: #dfdfdf;
+            padding: 6px 10px;
+            border-radius: 3px;
+            max-width: 180px;
+            width: 100%;
+            margin: 0 auto;
+            cursor: pointer;
+            font-size: 16px;
+            &:first-child {
+                background-color: red;
+                color: #fff;
+            }
+            &:hover {
+                background-color: #ccc;
+                color: #000;
+            }
         }
     }
 }
