--- a/src/components/ListTask/ListTask.module.scss
+++ b/src/components/ListTask/ListTask.module.scss
@@ -6,76 +6,19 @@
     position: relative;
     li {
         width: 100%;
-        background-color: #dfdfdf;
+        background-color: #0f7c8b1f;
         border-radius: 3px;
         gap: 8px;
         position: relative;
         padding: 6px 10px 6px 30px;
         
-        input[type="checkbox"] {
-            /* Add if not using autoprefixer */
-            -webkit-appearance: none;
-            /* Remove most all native input styles */
-            appearance: none;
-            /* For iOS < 15 */
-            background-color: #fff;
-            /* Not removed via appearance */
-            margin: 0;
-          
-            font: inherit;
-            color: currentColor;
-            width: 31px;
-            height: 31px;
-            border: 0.15em solid #2cd12c;
-            background-color: #5ee15e;
-            border-radius: 50%;
-            position: absolute;
-            left: -11px;
-            outline: none!important;
-            // transform: translateY(-0.075em);
-          
-            display: grid;
-            place-content: center;
-            cursor: pointer;
-        }
-        
-        input[type="checkbox"]::before {
-        content: "";
-        width: 0.65em;
-        height: 0.65em;
-        clip-path: polygon(14% 44%, 0 65%, 50% 100%, 100% 16%, 80% 0%, 43% 62%);
-        transform: scale(0);
-        transform-origin: bottom left;
-        transition: 120ms transform ease-in-out;
-        box-shadow: inset 1em 1em var(--form-control-color);
-        /* Windows High Contrast Mode */
-        background-color: CanvasText;
-        }
-        
-        input[type="checkbox"]:checked::before {
-        transform: scale(1);
-        border: 0.15em solid #2cd12c;
-        }
-        
-        input[type="checkbox"]:focus {
-        outline: max(2px, 0.15em) solid currentColor;
-        outline-offset: max(2px, 0.15em);
-        }
-        
-        input[type="checkbox"]:disabled {
-        --form-control-color: var(--form-control-disabled);
-        
-        color: var(--form-control-disabled);
-        cursor: not-allowed;
-        }
-        
         button {
             position: absolute;
             right: 0;
-            background: red;
+            background: transparent;
             width: 30px;
             height: 30px;
-            color: #fff;
+            color: #eb1313;
             font-size: 16px;
             border-radius: 3px;
             cursor: pointer;
@@ -98,11 +41,13 @@
     max-width: 100%;
     width: 100%;
     button {
-        border: 1px solid #515151;
-        padding: 4px;
+        background-color: #0f7c8b;
+        padding: 8px 15px;
+        color: #fff;
+        border-radius: 3px;
         cursor: pointer;
         &:hover {
-            border: 1px solid #262626;
+            transform: scale(1.1);
         }
     }
 }
@@ -120,7 +65,8 @@
     background-color: #efefef;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: center;
+    gap: 40px;
     padding: 30px;
     text-align: center;
     h2 {
