--- a/src/components/ListTask/ListTask.module.scss
+++ b/src/components/ListTask/ListTask.module.scss
@@ -1,58 +1,3 @@
-.listaItem {
-    max-width: 100%;
-    width: 100%;
-    flex-direction: column;
-    gap: 6px;
-    position: relative;
-    li {
-        width: 100%;
-        background-color: #0f7c8b1f;
-        border-radius: 3px;
-        gap: 8px;
-        position: relative;
-        padding: 6px 10px 6px 30px;
-        
-        button {
-            position: absolute;
-            right: 0;
-            background: transparent;
-            width: 30px;
-            height: 30px;
-            color: #eb1313;
-            font-size: 16px;
-            border-radius: 3px;
-            cursor: pointer;
-            display: none;
-            justify-content: center;
-        }
-        &:hover {
-            & > button {
-                display: flex;
-            }
-        }
-        &.itemCheck {
-            background-color: #2cd12c;
-        }
-    }
-}
-
-.buttonLimpar {
-    justify-content: space-between;
-    max-width: 100%;
-    width: 100%;
-    button {
-        background-color: #0f7c8b;
-        padding: 8px 15px;
-        color: #fff;
-        border-radius: 3px;
-        cursor: pointer;
-        &:hover {
-            transform: scale(1.1);
-        }
-    }
-}
-
-
 .modalConfirmClearTask {
     transform: translate(50%, -50%);
     top: 50%;
@@ -93,6 +38,30 @@
                 background-color: #ccc;
                 color: #000;
             }
+        }
+    }
+}
+
+.listTask{
+    max-width: 100%;
+    width: 100%;
+    flex-direction: column;
+    gap: 6px;
+    position: relative;
+}
+
+.buttonLimpar {
+    justify-content: space-between;
+    max-width: 100%;
+    width: 100%;
+    button {
+        background-color: #0f7c8b;
+        padding: 8px 15px;
+        color: #fff;
+        border-radius: 3px;
+        cursor: pointer;
+        &:hover {
+            transform: scale(1.1);
         }
     }
 }
