--- a/src/paginas/Home/Home.module.scss
+++ b/src/paginas/Home/Home.module.scss
@@ -1,17 +1,21 @@
-.modalCenter {
-    background-color: #fff;
-    transform: translate(50%, -50%);
-    top: 50%; 
-    right: 50%;
+.container {
     position: absolute;
-    padding: 30px;
-    flex-direction: column;
-    gap: 30px;
-    max-width: 480px;
+    justify-content: center;
+    height: 100%;
+    max-width: 100%;
     width: 100%;
-    border-radius: 3px;
-    &__feedbackError {
-        color: red;
-        font-size: 12px;
+    &__modalCenter {
+        background-color: #fff;
+        margin: 0 20px;
+        padding: 30px;
+        flex-direction: column;
+        gap: 30px;
+        max-width: 480px;
+        width: 100%;
+        border-radius: 3px;
+        &__feedbackError {
+            color: red;
+            font-size: 12px;
+        }
     }
 }
