--- a/src/components/ListTask/ListTask.module.scss
+++ b/src/components/ListTask/ListTask.module.scss
@@ -55,6 +55,9 @@
     flex-direction: column;
     gap: 6px;
     position: relative;
+    background-color: rgba(15, 124, 139, 0.1215686275);
+    border-radius: 3px;
+    padding: 6px 0;
 }
 
 .buttonLimpar {
