--- a/src/paginas/Home/Home.module.scss
+++ b/src/paginas/Home/Home.module.scss
@@ -13,6 +13,7 @@
         max-width: 480px;
         width: 100%;
         border-radius: 3px;
+        position: relative;
         &__feedbackError {
             color: red;
             font-size: 12px;
