novos estilos para o undo de tarefas e verificacao de tarefa repetida

--- a/src/components/ListTask/ListTask.module.scss
+++ b/src/components/ListTask/ListTask.module.scss
@@ -50,29 +50,44 @@
 }
 
 .containerUndoAction {
-    position: absolute;
-    bottom: 0;
-    right: 0px;
+    position: fixed;
+    top: 100px;
+    right: 0;
     padding: 12px;
-    background: #26232352;
+    background: #fff;
     border-radius: 3px;
-    max-width: 100%;
+    max-width: 200px;
     width: 100%;
     justify-content: center;
+    flex-direction: column;
     z-index: 999999999999999999999;
-    display: none;
+    transform: translateX(-70px);
+    -webkit-transition: all 0.5s 0s linear;
+    -moz-transition: all 0.5s 0s linear;
+    -o-transition: all 0.5s 0s linear;
+    transition: all 0.5s 0s linear;
+    animation: undoEffect 1s linear;
     button {
         background: transparent;
-        font-size: 18px;
-        color: #fff;
+        font-size: 14px;
+        color: #262626;
+        cursor: pointer;
+        text-transform: uppercase;
         cursor: pointer;
         &:hover {
             transform: scale(1.1);
         }
     }
-    &.efeitoAtivo {
-        display: flex;
-        bottom: -60px;
+    &::after {
+        content: "";
+        bottom: -1px;
+        background: #00e0ff;
+        width: 100%;
+        height: 3px;
+        position: absolute;
+        left: 0;
+        animation: load 2s linear;
+        border-radius: 3px;
     }
 }
 
@@ -100,5 +115,41 @@
         &:hover {
             transform: scale(1.1);
         }
+    }
+}
+
+@keyframes undoEffect {
+    0% {
+        transform: translateX(200px);
+    }
+    25% {
+        transform: translateX(100px);
+    }
+    50% {
+        transform: translateX(0);
+    }
+    75% {
+        transform: translateX(-50px);
+    }
+    100% {
+        transform: translateX(-70px);
+    }
+}
+
+@keyframes load{
+    0% {
+        width: 0;
+    }
+    25% {
+        width: 25%;
+    }
+    50% {
+        width: 50%;
+    }
+    75% {
+        width: 75%;
+    }
+    100% {
+        width: 100%;
     }
 }
