--- a/src/components/ListItem/ListItem.module.scss
+++ b/src/components/ListItem/ListItem.module.scss
@@ -5,6 +5,7 @@
     gap: 8px;
     position: relative;
     padding: 6px 10px 6px 30px;
+    color: #13232a;
     .iconCheckTask, 
     .iconUncheckTask {
         position: absolute;
