--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@ body, * {
   font-family: Georgia, "Times New Roman", serif;
 }
 
-body {
+/* body {
   background: #0f7c8b;
-}
+} */
 
 .flex {
   display: flex;
