--- a/src/paginas/Home/Home.module.scss
+++ b/src/paginas/Home/Home.module.scss
@@ -7,12 +7,20 @@
     &__modalCenter {
         background-color: #fff;
         margin: 0 20px;
-        padding: 30px;
+        padding: 40px 30px;
         flex-direction: column;
         gap: 30px;
-        max-width: 480px;
+        max-width: 370px;
         width: 100%;
         border-radius: 3px;
+        background: rgba(8, 121, 149, 0.1294117647);
+        img {
+            max-width: 100px;
+            width: 100%;
+            object-fit: contain;
+            height: auto;
+            padding: 0 0 20px 0;
+        }
         &__feedbackError {
             color: red;
             font-size: 12px;
