--- a/src/components/ListTask/ListTask.module.scss
+++ b/src/components/ListTask/ListTask.module.scss
@@ -52,10 +52,10 @@
 
 .containerUndoAction {
     position: fixed;
-    top: 100px;
+    top: 20px;
     right: 0;
     padding: 12px;
-    background: #fff;
+    background: #dfeef1;
     border-radius: 3px;
     max-width: 200px;
     width: 100%;
@@ -68,10 +68,19 @@
     -o-transition: all 0.5s 0s linear;
     transition: all 0.5s 0s linear;
     animation: undoEffect 1s linear;
+    @media only screen and (max-width: 768px) {
+        transform: none;
+        top: 0;
+        left: 0;
+        max-width: 100%;
+        width: 100%;
+        padding: 20px;
+        animation: undoEffectMobile 1s linear;
+    }
     button {
         background: transparent;
         font-size: 14px;
-        color: #262626;
+        color: #13232a;
         cursor: pointer;
         text-transform: uppercase;
         cursor: pointer;
@@ -87,7 +96,7 @@
         height: 3px;
         position: absolute;
         left: 0;
-        animation: load 2s linear;
+        animation: load 1s linear;
         border-radius: 3px;
     }
 }
@@ -140,6 +149,24 @@
     }
     100% {
         transform: translateX(-70px);
+    }
+}
+
+@keyframes undoEffectMobile {
+    0% {
+        transform: translateX(200px);
+    }
+    25% {
+        transform: translateX(100px);
+    }
+    50% {
+        transform: translateX(50px);
+    }
+    75% {
+        transform: translateX(25px);
+    }
+    100% {
+        transform: translateX(0px);
     }
 }
 
